removed a subtitle that wasn't supposed to be there

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>
       Insert Token Here
     </title>
-    <meta name="description" content="Simple landind page" />
+    <meta name="description" content="Landing page for Insert Token Here software consulting" />
     <meta name="keywords" content="" />
     <meta name="author" content="" />
     <link rel="stylesheet" href="https://unpkg.com/tailwindcss@2.2.19/dist/tailwind.min.css"/>
